syntax = "proto3";

package notification;

option csharp_namespace = "Mobius.Proto.Social";
option go_package = "github.com/justjack1521/mevium/pkg/genproto/protosocial";

message PlayerPresenceUpdateMessage {
  string player_id = 1;
  uint64 online = 2;
}

message PlayerPositionUpdateMessage {
  string player_id = 1;
  string region_map = 2;
  int32 region_map_node = 3;
}

message PlayerCompanionUpdateMessage {
  string player_id = 1;
  string companion_id = 2;
}

message PlayerCommentUpdateMessage {
  string player_id = 1;
  string comment = 2;
}

message PlayerNameUpdateMessage {
  string player_id = 1;
  string previous = 2;
  string current = 3;
}